# brand

./: Dockerfile  asgi.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
app/: config.py  main.py
app/auth/: auth_bearer.py
app/dtos/cart/: cart_creation_request.py  cart_response.py  cart_update_request.py
app/dtos/comment/: comment_creation_request.py  comment_response.py  comment_update_request.py
app/dtos/item/: item_creation_request.py  item_response.py  item_update_request.py
app/dtos/notice/: notice_request.py  notice_response.py
app/dtos/oauth_login/: kakao_dto.py  naver_dto.py
app/dtos/order/: order_creation_request.py  order_request.py  order_response.py
app/dtos/payment/: payment_request.py  payment_response.py
app/dtos/qna/: qna_request.py  qna_response.py
app/dtos/user/: user_delivery_request.py  user_duplicated_request.py  user_duplicated_response.py  user_find_password.py  user_jwt_payload.py  user_profile_response.py  user_refresh_access_request.py  user_set_passwd_request.py  user_signin_request.py  (+4 more)
app/exceptions/: __init__.py
app/services/: cart_service.py  comment_service.py  item_service.py  notice_service.py  oauth_service.py  order_service.py  payment_service.py  qna_service.py  user_service.py
app/templates/: index.html
app/tests/: conftest.py  fixtures.py
app/utils/: connection.py  connection_aws.py  cookie_util.py  item_dummy_data.py  payment_util.py  redis_.py  redis_scheduler.py  send_mail.py  toss_confirm_access_token.py  utility.py
nginx/: nginx.conf
(+56 files in other folders)
